--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
             <div class="inputs">
                 <div class="input-group">
                     <label" for="">From</label>
-                    <input class="inp-style" type="text" name="" placeholder="Dhaka">
+                    <input id="departFrom" class="inp-style" type="text" name="" placeholder="Dhaka">
                 </div>
                 <div class="input-group">
-                    <label" for="">From</label>
-                    <input class="inp-style" type="text" name="" placeholder="Chittagone">
+                    <label" for="">To</label>
+                    <input id="departTo" class="inp-style" type="text" name="" placeholder="Chittagone">
                 </div>
             </div>
 
             <div class="inputs">
                 <div class="input-group">
                     <label" for="">Departure</label>
-                    <input class="inp-style" type="date" name="">
+                    <input id="departureDate" class="inp-style" type="date" name="">
                 </div>
                 <div class="input-group">
                     <label for="">Return</label>
-                    <input class="inp-style" type="date" name="">
+                    <input id="returnDate" class="inp-style" type="date" name="">
                 </div>
             </div>
             <div class="inputs">
@@ -107,7 +107,7 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-style">Book Now</button>
+            <button id="bookNowButton" class="btn-style">Book Now</button>
         </div>
     </main>
 
@@ -166,8 +166,8 @@
 
         //calculate ticket price
         function calculateTicketPrice(){
-            let firstClassTicket = getInputNumber("firstClassTicket");
-            let economyTicket = getInputNumber("economyTicket");
+            const firstClassTicket = getInputNumber("firstClassTicket");
+            const economyTicket = getInputNumber("economyTicket");
 
             const subTotalFirstClass = firstClassTicket * 150;
             const subTotalEconomy = economyTicket * 100;
@@ -179,6 +179,19 @@
             document.getElementById("vat").innerText = vat;
             document.getElementById("total").innerText = total;
         }
+
+        //bookNowButton event handler
+        const bookNowButton = document.getElementById("bookNowButton");
+        bookNowButton.addEventListener("click", function(){
+            document.getElementById("firstClassTicket").value = 0;
+            document.getElementById("economyTicket").value = 0;
+
+            document.getElementById("subTotal").innerText = 00;
+            document.getElementById("vat").innerText = 00;
+            document.getElementById("total").innerText = 00;
+            
+            alert("Booking Successful");
+        });
     </script>
 </body>
 
