--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
         //bookNowButton event handler
         const bookNowButton = document.getElementById("bookNowButton");
         bookNowButton.addEventListener("click", function(){
+            const firstClassTicket = document.getElementById("firstClassTicket").value;
+            const economyTicket = document.getElementById("economyTicket").value;
+            const total = document.getElementById("total").innerText;
+
             document.getElementById("firstClassTicket").value = 0;
             document.getElementById("economyTicket").value = 0;
 
@@ -190,7 +194,7 @@
             document.getElementById("vat").innerText = 00;
             document.getElementById("total").innerText = 00;
             
-            alert("Booking Successful");
+            alert("Booking Successful!\nFirst Class Ticket: "+ firstClassTicket +"\nEconomy Ticket: "+ economyTicket + "\nTotal Price: $" + total);
         });
     </script>
 </body>
